Converted documentation links to HTTPS.

--- a/spec/shapes/bit.coffee.html
+++ b/spec/shapes/bit.coffee.html
@@ -353,7 +353,7 @@ expect(bit.el.getAttribute(&#39;stroke&#39;)).toBe &#39;orange&#39;</p>
       <div class="segment">
       
         <div class="comments ">
-          <div class="wrapper"><p>probably not needed <a href="http://jsperf.com/gettotallength-vs-3-functions">http://jsperf.com/gettotallength-vs-3-functions</a>
+          <div class="wrapper"><p>probably not needed <a href="https://jsperf.com/gettotallength-vs-3-functions">https://jsperf.com/gettotallength-vs-3-functions</a>
 as getTotalLength is faster then 3 function calls for webkits
 and longer for ff and ies, but anyways it is too fast to care about
 it &#39;should not call getLength method if radius didnt change&#39;, -&gt;
