Revert "Converted jsdelivr link to HTTPS."
This reverts commit 2a84a19680e70b9ae817c52ca5d5ad21df5d7e92.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="vendor/benchmark.js"></script>
 
     <!-- <script src="node_modules/mojs-player/build/mojs-player.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/mojs/latest/mo.min.js"></script> -->
+    <!-- <script src="http://cdn.jsdelivr.net/mojs/latest/mo.min.js"></script> -->
     <script src="build/mo.js"></script>
 
   </body>
