Add default favicon to prevent console warning

--- a/dev/index.html
+++ b/dev/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>mo · js [dev-server]</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <link type="text/css" rel="stylesheet" media="all" href="style.css">
   </head>
   <body>
