Upgrade to webpack 5

--- a/dev/index.html
+++ b/dev/index.html
@@ -8,8 +8,6 @@
   </head>
   <body>
     <div class="mojs-version">mo · js</div>
-    <script src="mo.js"></script>
-    <script src="https://unpkg.com/@mojs/player"></script>
-    <script src="script.js"></script>
+    <script src="dev.js"></script>
   </body>
 </html>
