--- a/dev/index.html
+++ b/dev/index.html
@@ -7,6 +7,33 @@
     <link type="text/css" rel="stylesheet" media="all" href="style.css">
   </head>
   <body>
+
+    <h1>
+      <a
+        target="_blank"
+        href="https://www.linkedin.com/feed/update/urn:li:activity:7100948062470062081/"
+        >Array Methods Visualized</a
+      >
+      <em>...&amp; animated</em>
+    </h1>
+    <div id="app">
+      <div class="char method" id="push">
+        .push(<span class="c-space"></span>)
+      </div>
+      <div class="char" id="left-bracket">[</div>
+      <div class="char" id="right-bracket">]</div>
+      <div class="char" id="left-bracket2">[</div>
+      <div class="char" id="right-bracket2">]</div>
+      <!-- HTML Entity: https://www.toptal.com/designers/htmlarrows/arrows/ -->
+      <div class="char" id="long-right-arrow">&xrarr;</div>
+      <div class="char" id="left-parens">(</div>
+      <div class="char" id="right-parens">)</div>
+      <div class="char" id="equal">=</div>
+      <div class="char" id="dot">.</div>
+    </div>
+
+    <img src="array.methods.visualized.jpeg" width="100%" />
+
     <div class="mojs-version">mo · js</div>
     <script src="dev.js"></script>
   </body>
