--- a/dev/index.html
+++ b/dev/index.html
@@ -23,29 +23,23 @@
       Visualized</a>
     <em>...&amp; animated</em>
   </h1>
-  <div id="app">
-    <div class="demo-init">
-      <button>&#9658; Play</button>
+  <section class="demo-container">
+    <div id="app">
+      <div class="demo-init-wrapper">
+        <button class="demo-init">&#9658; Play</button>
+        <button class="demo-reset" hidden>Reset</button>
+      </div>
+      <div class="code-show">
+        <button>
+          <span class="arrow">&#8679;</span>
+          <span class="text">Hide Code</span>
+        </button>
+      </div>
     </div>
-    <div class="code-show">
-      <button>
-        <span class="arrow">&#8679;</span>
-        <span class="text">Hide Code</span>
-      </button>
-    </div>
-  </div>
+    <pre class="code active"></pre>
+  </section>
 
-  <pre class="code active">
-    <code class="language-javascript">
-      const letters = [ "A", "B", "C", "D" ];
-      letters.push( "E" );
 
-      console.log( letters ); // [ "A", "B", "C", "D", "E" ];
-    </code>
-  </pre>
-  <script>
-    // Prism.highlightAll();
-  </script>
 
   <img src="array.methods.visualized.jpeg" width="100%" />
 
