Finished push demo

--- a/dev/index.html
+++ b/dev/index.html
@@ -23,23 +23,8 @@
       Visualized</a>
     <em>...&amp; animated</em>
   </h1>
-  <section class="demo-container">
-    <div id="app">
-      <div class="demo-init-wrapper">
-        <button class="demo-init">&#9658; Play</button>
-        <button class="demo-reset" hidden>Reset</button>
-      </div>
-      <div class="code-show">
-        <button>
-          <span class="arrow">&#8679;</span>
-          <span class="text">Hide Code</span>
-        </button>
-      </div>
-    </div>
-    <pre class="code active"></pre>
-  </section>
 
-
+  <section id="array-push"></section>
 
   <img src="array.methods.visualized.jpeg" width="100%" />
 
