--- a/dev/index.html
+++ b/dev/index.html
@@ -26,6 +26,8 @@
 
   <section id="array-push"></section>
 
+  <section id="array-unshift"></section>
+
   <img src="array.methods.visualized.jpeg" width="100%" />
 
   <div class="mojs-version">mo · js</div>
