--- a/dev/index.html
+++ b/dev/index.html
@@ -26,6 +26,7 @@
 
   <section id="array-push"></section>
   <section id="array-unshift"></section>
+  <section id="array-pop"></section>
 
   <img src="array.methods.visualized.jpeg" width="100%" />
 
