--- a/dev/index.html
+++ b/dev/index.html
@@ -28,7 +28,10 @@
   <section id="array-unshift"></section>
   <section id="array-pop"></section>
 
-  <img src="array.methods.visualized.jpeg" width="100%" />
+  <div style="margin-top: 2rem;">
+    <button>Show Visuals</button>
+    <!-- <img src="array.methods.visualized.jpeg" width="100%" /> -->
+  </div>
 
   <script src="dev.js"></script>
 </body>
