Updated shift method

--- a/dev/index.html
+++ b/dev/index.html
@@ -24,7 +24,13 @@
     <em>...&amp; animated</em>
   </h1>
 
+  <div class="controls">
+    <button id="inplace">In-place Operations</button>
+    <button id="immutable">Immutable Operations</button>
+  </div>
+
   <section id="array-push"></section>
+  <section id="array-shift"></section>
   <section id="array-unshift"></section>
   <section id="array-pop"></section>
 
@@ -33,7 +39,16 @@
     <!-- <img src="array.methods.visualized.jpeg" width="100%" /> -->
   </div>
 
-  <script src="dev.js"></script>
+  <!-- Other resources -->
+  <!-- https://www.reddit.com/r/learnjavascript/comments/tjgrzq/visualizing_the_javascript_array_methods/ -->
+  <!-- https://danielstern.github.io/array.visualize/ -->
+  <!-- https://visualizer.simon-weiss.com/ -->
+  <!-- https://js-arrays-visualized.com/ -->
+  <!-- https://medium.com/@sewolpe/visualizing-javascript-array-methods-7babf560f7be -->
+  <!-- https://array-methods.github.io/ -->
+  <!-- https://www.linkedin.com/posts/rammcodes_javascript-array-methods-visualized-activity-7084767628988198912-uZ4V/ -->
+
+  <script src="./dev.js"></script>
 </body>
 
 </html>
