--- a/dev/index.html
+++ b/dev/index.html
@@ -24,20 +24,26 @@
     <em>...&amp; animated</em>
   </h1>
 
-  <div class="controls">
-    <button id="inplace">In-place Operations</button>
-    <button id="immutable">Immutable Operations</button>
-  </div>
-
-  <section id="array-push"></section>
-  <section id="array-shift"></section>
-  <section id="array-unshift"></section>
-  <section id="array-pop"></section>
-
-  <div style="margin-top: 2rem;">
+  <div class="visuals" style="margin: 1rem auto 1rem auto; text-align: center;">
     <button>Show Visuals</button>
     <!-- <img src="array.methods.visualized.jpeg" width="100%" /> -->
   </div>
+
+  <!-- PLAYGROUND -->
+  <section class="playground-container show-inplace show-immutable">
+
+    <div class="controls">
+      <button id="inplace">In-place Operations</button>
+      <button id="immutable">Immutable Operations</button>
+    </div>
+
+    <section id="array-push"></section>
+    <section id="array-shift"></section>
+    <section id="array-unshift"></section>
+    <section id="array-pop"></section>
+
+  </section>
+  <!-- PLAYGROUND -->
 
   <!-- Other resources -->
   <!-- https://www.reddit.com/r/learnjavascript/comments/tjgrzq/visualizing_the_javascript_array_methods/ -->
@@ -47,6 +53,15 @@
   <!-- https://medium.com/@sewolpe/visualizing-javascript-array-methods-7babf560f7be -->
   <!-- https://array-methods.github.io/ -->
   <!-- https://www.linkedin.com/posts/rammcodes_javascript-array-methods-visualized-activity-7084767628988198912-uZ4V/ -->
+
+  <div class="support">
+    <p>
+      Created with ❤️ and <em>lots of debugging</em> by <a href="https://github.com/kostasx/" target="_blank">@kostasx</a>
+    </p>
+    <p>
+      <a href="https://www.buymeacoffee.com/kostasx"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=kostasx&button_colour=BD5FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00" /></a>
+    </p>
+  </div>
 
   <script src="./dev.js"></script>
 </body>
