Updated support section

--- a/dev/index.html
+++ b/dev/index.html
@@ -13,7 +13,10 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/plugins/normalize-whitespace/prism-normalize-whitespace.min.js" integrity="sha512-aPubUkCu4Q3chwaw1x6FTyDrJacmoRlfsLQ5/mrQaPkBrjSU4o9Byt3h84t82mXJh2/GvA80LWkhAEks23DslA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/plugins/normalize-whitespace/prism-normalize-whitespace.min.js"
+    integrity="sha512-aPubUkCu4Q3chwaw1x6FTyDrJacmoRlfsLQ5/mrQaPkBrjSU4o9Byt3h84t82mXJh2/GvA80LWkhAEks23DslA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
@@ -55,11 +58,13 @@
   <!-- https://www.linkedin.com/posts/rammcodes_javascript-array-methods-visualized-activity-7084767628988198912-uZ4V/ -->
 
   <div class="support">
-    <p>
-      Created with ❤️ and <em>lots of debugging</em> by <a href="https://github.com/kostasx/" target="_blank">@kostasx</a>
+    <p style="margin-bottom: 2rem;">
+      Created with ❤️ and <a href="https://mojs.github.io/" target="_blank" style="line-height: 24px; display: inline-block; height: 24px"><img height="24px" style="vertical-align: middle;" src="mojs.png" alt=""></a>  and <em>...lots of debugging</em> by <a href="https://github.com/kostasx/"
+        target="_blank">@kostasx</a>
     </p>
     <p>
-      <a href="https://www.buymeacoffee.com/kostasx"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=kostasx&button_colour=BD5FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00" /></a>
+      <a href="https://www.buymeacoffee.com/kostasx"><img
+          src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=kostasx&button_colour=BD5FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00" /></a>
     </p>
   </div>
 
