Started working on filter

--- a/dev/index.html
+++ b/dev/index.html
@@ -40,6 +40,8 @@
       <button id="immutable">Immutable Operations</button>
     </div>
 
+    <section id="array-filter"></section>
+
     <section id="array-push"></section>
     <section id="array-shift"></section>
     <section id="array-unshift"></section>
@@ -56,6 +58,7 @@
   <!-- https://medium.com/@sewolpe/visualizing-javascript-array-methods-7babf560f7be -->
   <!-- https://array-methods.github.io/ -->
   <!-- https://www.linkedin.com/posts/rammcodes_javascript-array-methods-visualized-activity-7084767628988198912-uZ4V/ -->
+  <!-- https://www.reddit.com/r/learnjavascript/comments/tjgrzq/visualizing_the_javascript_array_methods/ -->
 
   <div class="support">
     <p style="margin-bottom: 2rem;">
