Started working on map()

--- a/dev/index.html
+++ b/dev/index.html
@@ -40,6 +40,8 @@
       <button id="immutable">Immutable Operations</button>
     </div>
 
+    <section id="array-map"></section>
+
     <section id="array-push"></section>
     <section id="array-shift"></section>
     <section id="array-unshift"></section>
