Added interactive playground for practice

--- a/dev/index.html
+++ b/dev/index.html
@@ -27,9 +27,12 @@
     <em>...&amp; animated</em>
   </h1>
 
-  <div class="visuals" style="margin: 1rem auto 1rem auto; text-align: center;">
-    <button>Show Visuals</button>
-    <!-- <img src="array.methods.visualized.jpeg" width="100%" /> -->
+  <!-- <div class="visuals" style="margin: 1rem auto 1rem auto; text-align: center;">
+    <img src="array.methods.visualized.jpeg" width="100%" />
+  </div> -->
+
+  <div class="details">
+    Press the <strong>Reset</strong> button and then <strong>Play</strong> to repeat the animation.
   </div>
 
   <!-- PLAYGROUND -->
@@ -65,7 +68,7 @@
   <div class="support">
     <p style="margin-bottom: 2rem;">
       Created with ❤️ and <a href="https://mojs.github.io/" target="_blank" style="line-height: 24px; display: inline-block; height: 24px"><img height="24px" style="vertical-align: middle;" src="mojs.png" alt=""></a>  and <em>...lots of debugging</em> by <a href="https://github.com/kostasx/"
-        target="_blank">@kostasx</a>
+        target="_blank">@kostasx</a> for <a href="https://intechgration.io">intechgration.io</a>
     </p>
     <p>
       <a href="https://www.buymeacoffee.com/kostasx"><img
