Started working on join()

--- a/dev/index.html
+++ b/dev/index.html
@@ -28,11 +28,15 @@
   </h1>
 
   <!-- <div class="visuals" style="margin: 1rem auto 1rem auto; text-align: center;">
-    <img src="array.methods.visualized.jpeg" width="100%" />
+    <img width="50%" src="array.methods.visualized.jpeg" />
+    <img src="Merging.Arrays.jpeg" />
   </div> -->
 
-  <div class="details">
-    Press the <strong>Reset</strong> button and then <strong>Play</strong> to repeat the animation.
+  <div class="details" hidden>
+    <p>
+      Press the <strong>Reset</strong> button and then <strong>Play</strong> to repeat the animation.
+    </p>
+    <p>Click on the <strong>In-place operations</strong> and <strong>Immutable Operations</strong> buttons below to filter between immutable and in-place array methods.</p>
   </div>
 
   <!-- PLAYGROUND -->
@@ -43,13 +47,14 @@
       <button id="immutable">Immutable Operations</button>
     </div>
 
-    <section id="array-map"></section>
+    <section id="array-join"></section>
 
     <section id="array-push"></section>
     <section id="array-shift"></section>
     <section id="array-unshift"></section>
     <section id="array-pop"></section>
     <section id="array-filter"></section>
+    <section id="array-map"></section>
 
   </section>
   <!-- PLAYGROUND -->
