Finished join(). Started working on flat().

--- a/dev/index.html
+++ b/dev/index.html
@@ -47,8 +47,9 @@
       <button id="immutable">Immutable Operations</button>
     </div>
 
-    <section id="array-join"></section>
+    <section id="array-flat"></section>
 
+    <section id="array-join"></section>
     <section id="array-push"></section>
     <section id="array-shift"></section>
     <section id="array-unshift"></section>
