Added flat() method. Added search/filtering feature

--- a/dev/index.html
+++ b/dev/index.html
@@ -47,6 +47,10 @@
       <button id="immutable">Immutable Operations</button>
     </div>
 
+    <div class="controls search">
+      <input type="search" placeholder="e.g. filter">
+    </div>
+
     <section id="array-flat"></section>
 
     <section id="array-join"></section>
