--- a/dev/index.html
+++ b/dev/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="controls search">
-      <input type="search" placeholder="e.g. filter">
+      <input type="search" placeholder="e.g. filter, map, slice">
     </div>
 
     <section id="array-slice"></section>
